# chenpilot

./: IPBLACKLIST_IMPLEMENTATION.md  MULTI_HOP_BUILD_VERIFICATION.md  MULTI_HOP_IMPLEMENTATION_SUMMARY.md  README_MULTI_HOP.md  SECURITY_AUDIT_106.md  commitlint.config.js  eslint.config.mjs  eslint.config.mts  hardhat.config.js  hardhat.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
contracts/: Cargo.toml  CoreEngine.sol
contracts/access/: EmergencyControl.sol
contracts/btc_relay/: Cargo.toml
contracts/btc_relay/src/: lib.rs  test.rs
contracts/btc_relay_crypto/: Cargo.toml
contracts/btc_relay_crypto/src/: lib.rs
contracts/core_vault/: Cargo.toml
contracts/core_vault/src/: lib.rs  test.rs
contracts/fee_distribution/: Cargo.toml
contracts/fee_distribution/src/: lib.rs  test.rs
contracts/flash_loan_guard/: Cargo.toml
contracts/flash_loan_guard/src/: lib.rs  test.rs
contracts/htlc/: Cargo.toml
contracts/htlc/src/: lib.rs  test.rs
contracts/lending_liquidation/: Cargo.toml
contracts/lending_liquidation/src/: lib.rs  test.rs
contracts/liquidity_vault/: Cargo.toml
contracts/liquidity_vault/src/: lib.rs  test.rs
contracts/multi_hop_swap/: Cargo.toml
contracts/multi_hop_swap/src/: lib.rs  test.rs
contracts/por_validator/: Cargo.toml
contracts/por_validator/src/: lib.rs  test.rs
contracts/rbac/: Cargo.toml
contracts/rbac/src/: lib.rs  test.rs
contracts/relayer_slashing/: Cargo.toml
contracts/relayer_slashing/src/: lib.rs  test.rs
contracts/strategy_registry/: Cargo.toml
docs/: MULTI_HOP_ARCHITECTURE.md  (+2 more)
(+183 files in other folders)
