[workspace]
members = [
    "core_vault",
    "fee_distribution",
    "por_validator",
    "liquidity_vault",
    "relayer_slashing",
    "lending_liquidation",
]
resolver = "2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "debuginfo"
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug = true
