[workspace]
members = [
    "btc_relay",
    "btc_relay_crypto",
    "core_vault",
    "fee_distribution",
    "flash_loan_guard",
    "htlc",
    "lending_liquidation",
    "liquidity_vault",
    "multi_hop_swap",
    "por_validator",
    "rbac",
    "relayer_slashing",
    "strategy_registry",
]
resolver = "2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "debuginfo"
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug = true